--- a/dotconfig/tmux/tmux.conf
+++ b/dotconfig/tmux/tmux.conf
@@ -20,9 +20,14 @@ set-option -g default-terminal "screen-256color"
 # don't use vim keys in command mode
 set-option -g status-keys "emacs"
 
-# colors
-set-option -g status-bg "#303030"
-set-option -g status-fg "#5f87ae"
+# Catppuccin Mocha theme
+set-option -g status-bg "#1e1e2e"
+set-option -g status-fg "#cdd6f4"
+set-option -g status-style "bg=#1e1e2e,fg=#cdd6f4"
+set-option -g window-status-current-style "bg=#89b4fa,fg=#1e1e2e"
+set-option -g window-status-style "bg=#313244,fg=#cdd6f4"
+set-option -g pane-border-style "fg=#6c7086"
+set-option -g pane-active-border-style "fg=#89b4fa"
 
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key \" split-window -v -c "#{pane_current_path}"
