--- a/dotconfig/aerospace/aerospace.toml
+++ b/dotconfig/aerospace/aerospace.toml
@@ -123,7 +123,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-cmd-ctrl-7 = 'workspace 7'
     alt-cmd-ctrl-8 = 'workspace 8'
     alt-cmd-ctrl-9 = 'workspace 9'
-    alt-cmd-ctrl-a = 'workspace B' # Browser: Chrome, Firefox
+    alt-cmd-ctrl-b = 'workspace B' # Browser: Chrome, Firefox
     alt-cmd-ctrl-f = 'workspace F' # Finder
     alt-cmd-ctrl-m = 'workspace M' # Music: Spotify
     alt-cmd-ctrl-n = 'workspace N' # Notes: Obsidian
