--- a/dotconfig/aerospace/aerospace.toml
+++ b/dotconfig/aerospace/aerospace.toml
@@ -124,7 +124,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-cmd-ctrl-8 = 'workspace 8'
     alt-cmd-ctrl-9 = 'workspace 9'
     alt-cmd-ctrl-b = 'workspace B' # Browser: Chrome, Firefox
-    alt-cmd-ctrl-e = 'workspace 10' # External monitor
+    alt-cmd-ctrl-e = 'workspace E' # External monitor
     alt-cmd-ctrl-f = 'workspace F' # Finder
     alt-cmd-ctrl-m = 'workspace M' # Music: Spotify
     alt-cmd-ctrl-n = 'workspace N' # Notes: Obsidian
@@ -141,7 +141,7 @@ automatically-unhide-macos-hidden-apps = false
     alt-cmd-ctrl-shift-8 = 'move-node-to-workspace 8'
     alt-cmd-ctrl-shift-9 = 'move-node-to-workspace 9'
     alt-cmd-ctrl-shift-b = 'move-node-to-workspace B'
-    alt-cmd-ctrl-shift-e = 'move-node-to-workspace 10'
+    alt-cmd-ctrl-shift-e = 'move-node-to-workspace E'
     alt-cmd-ctrl-shift-f = 'move-node-to-workspace F'
     alt-cmd-ctrl-shift-m = 'move-node-to-workspace M'
     alt-cmd-ctrl-shift-n = 'move-node-to-workspace N'
@@ -171,3 +171,5 @@ automatically-unhide-macos-hidden-apps = false
     alt-cmd-ctrl-shift-k = ['join-with up', 'mode main']
     alt-cmd-ctrl-shift-l = ['join-with right', 'mode main']
 
+[workspace-to-monitor-force-assignment]
+    E = ['secondary', 'main']
